insertar y obtenerPorId de Foto funcionando (json de la insert en el mm)
