# slab/src/main/java/com/ipartek/formacion/slab/rest/BloqueRest.java
@@ -19,9 +19,9 @@ public class BloqueRest {
 		return BloqueAccesoDatos.obtenerBloquePorId(id);
 	}
 
-	@POST
-	public InsertBloqueDTO insertar(InsertBloqueDTO bloque, FotoDTO foto) {
-		return BloqueAccesoDatos.insertar(bloque, foto);
-	}
+//	@POST
+//	public InsertBloqueDTO insertar(InsertBloqueDTO bloque, FotoDTO foto) {
+//		return BloqueAccesoDatos.insertar(bloque, foto);
+//	}
 
 }
