# slab/src/main/webapp/openapi/slab.yml
@@ -33,6 +33,24 @@ paths:
                 schema:
                   $ref: '#/components/schemas/Bloque'
 
+  /bloques:
+    post:
+      tags:
+        - bloques
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Bloque'
+        required: true
+      responses:
+        '201':
+          description: CREATED
+          content:
+              application/json:
+                schema: 
+                  $ref: '#/components/schemas/Bloque'
+
   /rocodromos:
     post:
       tags: 
@@ -59,7 +77,9 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Rocodromo'
+              type: array
+              items:
+                $ref: '#/components/schemas/Foto'
         required: true
       responses:
         '201':
@@ -67,7 +87,10 @@ paths:
           content:
               application/json:
                 schema:
-                  $ref: '#/components/schemas/Rocodromo'
+                  type: array
+                  items:
+                    $ref: '#/components/schemas/Foto'
+  /fotos/{id}: 
     get:
       tags:
       - fotos
@@ -84,7 +107,7 @@ paths:
             content:
               application/json:
                   schema:
-                    $ref: '#/components/schemas/Rocodromo'
+                    $ref: '#/components/schemas/Foto'
 
   /rocodromos/{id}:
     get:
@@ -223,8 +246,7 @@ components:
         id:
           type: integer
           format: int64
-        nombre:
-          type: string        
+             
 
         
 
